@@ -1,106 +1,0 @@
-# based on http://brainspl.at/nginx.conf.txt
-
-user www-data;
-worker_processes 4;
-
-error_log  /var/log/nginx/error.log;
-pid        /var/run/nginx.pid;
-
-events {
-    worker_connections  1024;
-}
-
-http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
-
-    # configure log format
-    log_format main '$remote_addr - $remote_user [$time_local] '
-                    '"$request" $status  $body_bytes_sent "$http_referer" '
-                    '"$http_user_agent" "$http_x_forwarded_for"';
-
-    access_log	/var/log/nginx/access.log main;
-    error_log   /var/log/nginx/error.log debug;
-
-    sendfile       on;
-    tcp_nopush     on;
-
-    keepalive_timeout  0;
-    tcp_nodelay        off;
-
-    # output compression
-    gzip               on;
-    gzip_http_version  1.0;
-    gzip_comp_level    2;
-    gzip_proxied       any;
-    gzip_types         text/plain text/html text/css application/x-javascript text/xml application/xml application/xml+rss text/javascript;
-
-    # this is where you define your mongrel clusters. 
-    # you need one of these blocks for each cluster
-    # and each one needs its own name to refer to it later.
-    upstream mongrel {
-        server 127.0.0.1:8000;
-    }
-
-    # redirect requests with no www
-    server {
-        server_name www.rubybuild.org;
-        rewrite ^(.*) http://rubybuild.org$1 permanent;
-    }
-
-    # the server directive is nginx's virtual host directive.
-    server {
-        server_name rubybuild.org;
-        listen 80;
-
-        # Set the max size for file uploads to 1Mb
-        client_max_body_size 5M;
-
-        # doc root
-        root /home/deploy/rails/rubybuild/current/public;
-
-        access_log  /var/log/nginx/rubybuild.vhost.access.log main;
-
-        # cache these static files 'forever'
-        #location ~ ^/(images|javascripts|stylesheets)/ {
-        #    expires 10y;
-        #}   
-
-        location / {
-            # needed to forward user's IP address to rails
-            proxy_set_header  X-Real-IP  $remote_addr;
-            proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header Host $http_host;
-            proxy_redirect false;
-            proxy_max_temp_file_size 0;
-            
-            # static files in /public
-            if (-f $request_filename) {
-              break;
-            }
-
-            # if (-f $document_root/cache/$uri/index.html) {
-            #   rewrite (.*) /cache/$1/index.html break;
-            # }
-            # 
-            # if (-f $document_root/cache/$uri.html) {
-            #   rewrite (.*) /cache/$1.html break;
-            # }
-            # 
-            # if (-f $document_root/cache/$uri) {
-            #   rewrite (.*) /cache/$1 break;
-            # }
-            
-            # not cached, hit mongrel
-            if (!-f $request_filename) {
-              proxy_pass http://mongrel;
-              break;
-            }
-        }
-   
-        error_page   500 502 503 504  /500.html;
-        location = /500.html {
-            root   /home/deploy/rails/rubybuild/current/public;
-        }
-    }
-}
