@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-  <title>RubyBuild</title>
+  <title>RubySpecResults</title>
   <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
   <link href="/stylesheets/application.css" media="all"   rel="stylesheet" type="text/css" />
   <link href="/stylesheets/print.css"       media="print" rel="stylesheet" type="text/css" />
@@ -10,15 +10,8 @@
 <div id="page">
 <div id="header">
   <div id="title">
-    <a href="/">RubyBuild</a>
+    <a href="/">RubySpecResults</a>
   </div>
-</div>
-<div id="tabs">
-  <ul class="collapsed menu">
-    <li class="first"><a href="/home">Home</a></li>
-    <li><a href="/inbox">Messages</a></li>
-    <li><a href="/people">People</a></li>
-  </ul>
 </div>
 <div id="content" style="text-align:center;">
   <div style="margin:8em 0 8em 0;">
@@ -33,7 +26,12 @@
     </div>
   </div>
 </div>
-<div id="footer">footer</div>
+<div id="footer">
+  by <a class="external" href="http://ryanlowe.name">ryanlowe</a>
+  of <a class="external" href="http://www.disruptiveagility.com">disruptiveAgility</a>
+  | <a class="external" href="http://freenode.net/irc_servers.shtml">freenode</a> <code>#rubyspec</code>
+  | TODO list on <a class="external" href="http://lighterest.com">Lighterest</a>
+</div>
 </div>
 </body>
 </html>
