@@ -7,6 +7,8 @@ h1, h2, h3, h4, h5 { margin:0;padding:0; }
 a { color:#900;text-decoration:none; }
 a:hover { text-decoration:underline; }
 
+a.external { color:#c00;text-decoration:underline; }
+
 /* page elements */
 
 ul.collapsed       { list-style:none;display:inline;padding:0;margin:0;position:relative; }
