@@ -1,5 +1,6 @@
 
 Sep 20
+- update footer in static files
 - add information to the footer
 
 Sep 19
